<resources>
    <string name="app_name">Recicle</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cadastrar_item">Cadastrar Item</string>
    <string name="quantidade">Quantidade</string>
    <string name="item">Item</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="descri_o_do_item">Descrição do item</string>
    <string name="cadastre_um_item">Cadastre um Item</string>
    <string name="preencha_os_campos">Preencha os campos obrigatorios!</string>
    <string name="insira_a_quantidade">Quantidade</string>
    <string name="ok">Ok</string>
    <string name="atualize_informacoes">Atualize as informações</string>
    <string name="carregando_item_aguarde">Carregando Item, aguarde...</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar_item">Deletar Item</string>
</resources>